fixes footer to bottom of page and adds button spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,8 +29,21 @@ main {
   background-color: #fff;
 }
 
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    
+}
+
+.footer.push {
+  height: 100px;
+  position: fixed;
+  bottom: 0;
+}
+
 body {
-  margin: 0;
+  height: 100%;
 }
 article,
 aside,
