--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -99,7 +99,7 @@ pre {
 a {
   color: #deddda;
   &:visited {
-    color: #7a8288;
+    color: #deddda;
   }
   &:hover {
     color: #fff;
